--- a/blank.html
+++ b/blank.html
@@ -7,7 +7,6 @@
   <body>
   <header>
     <nav>
-      
       <ul> 
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
@@ -20,7 +19,7 @@
   <footer>
     <section>
       <h2>Контакты</h2>
-      <p>#visitsedona<br>
+      <p> #visitsedona 
       <a href="tel:+78005558628">+7 800 555-86-28</a>
       </p>
     </section>
@@ -41,11 +40,13 @@
         </li>
       </ul>
     </section>
-    <p>
+    <section>
+      <p>
       Website by
       <a href="https://htmlacademy.ru">HTML Academy</a>
-    </p>
+      </p>
+    </section>
   </footer>
-
+  
   </body>
 </html>
