--- a/index.html
+++ b/index.html
@@ -5,27 +5,23 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+
   <header>
     <nav>
       <a>
         <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
       </a>
       <ul> 
-        <li><a href="blank.html">Информация</a></li>
-        <li><a href="blank.html">Фото и видео</a></li>
-        <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="Hotels.html">Гостиницы</a></li>
+        <li><a href="blank.html">информация</a></li>
+        <li><a href="blank.html">фото и видео</a></li>
+        <li><a href="blank.html">карта штата</a></li>
+        <li><a href="Hotels.html">гостиницы</a></li>
       </ul>
     </nav>
   </header> 
 
   <main>
-    <section>
-      <p> Welcome to the gorgeous</p>
-      <h1>Sedona</h1>
-      <p> Because the Grand Canyon Sucks!</p>
-    </section>
-
+    <img src="https://via.placeholder.com/150x100" alt="Main image">
     <section>
       <h2>Описание</h2>
       <h3>Седона - небольшой городок в Аризоне, <br>  заслуживающий большего!</h3>
@@ -33,112 +29,59 @@
     </section>
     <section>
       <h3>Настоящий городок</h3>
-      <ul>
-        <li>
-          <p>— №1 —</p>
-        </li>
-        <li>
-          <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <figure>
+      <p>— №1 —</p>
+      <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       <img src="https://via.placeholder.com/150x100" alt="Photo Hotel">
-      </figure>
     </section>
     <section>
       <h3>Жильё</h3>
-      <ul>
-        <li>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </li>
-      </ul>
+      <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
     </section>
     <section>
     <h3>Еда</h3>
-    <ul>
-      <li>
-        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
-      </li>
-    </ul>
+    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
   </section>
   <section>
     <h3>Сувениры</h3>
-    <ul>
-      <li>
-        <p>Не только китайского, но и местного производства</p>
-      </li>
-    </ul>
+    <p>Не только китайского, но и местного производства</p>
   </section>
 
   <section>
-    <figure>
-      <img src="https://via.placeholder.com/150x100" alt="Canyon">
-    </figure>
-  </section>
-  <section>
+    <img src="https://via.placeholder.com/150x100" alt="Canyon">
     <h3>Там есть мост дьявола</h3>
-    <ul>
-      <li>
-        <p>— №2 —</p>
-      </li>
-      <li>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      </li>
-    </ul>
+    <p>— №2 —</p>
+    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
   </section>
   <section>
     <h3>Небольшая площадь</h3>
-    <ul>
-      <li>
-        <p>— №3 —</p>
-      </li>
-      <li>
-        <p>Все достопримечательности нахоядтся очень близко</p>
-      </li>
-    </ul>
+    <p>— №3 —</p>
+    <p>Все достопримечательности нахоядтся очень близко</p>
   </section>
   <section>
     <h3>Красивая дорога</h3>
-    <ul>
-      <li>
-        <p>— №4 —</p>
-      </li>
-      <li>
-        <p>ехать в седону из лас-вегаса совсем
-      не скучно!ь</p>
-      </li>
-    </ul>
+    <p>— №4 —</p>
+    <p>ехать в седону из лас-вегаса совсем не скучно!</p>
   </section>
   <section>
     <h3>Мало туристов</h3>
-    <ul>
-      <li>
-        <p>— №5 —</p>
-      </li>
-      <li>
-        <p>большинство едет в гранд каньон
-          и толпится там</p>
-      </li>
-    </ul>
+    <p>— №5 —</p>
+    <p>большинство едет в гранд каньон и толпится там</p>
   </section>
 
   <section>
     <h2>Заинтересовались?</h2>
-    <ul>
-      <li>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      </li>
-    </ul>
-  <a href="blank.html">Поиск Гостиницы в Седоне</a>
+    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <a href="blank.html">Поиск Гостиницы в Седоне</a>
+    <div>
+
+    </div>
   </section>
 </main>
 
 <footer>
   <section>
     <h2>Контакты</h2>
-    <p>#visitsedona<br>
+    <p> #visitsedona 
     <a href="tel:+78005558628">+7 800 555-86-28</a>
     </p>
   </section>
@@ -159,10 +102,12 @@
       </li>
     </ul>
   </section>
-  <p>
+  <section>
+    <p>
     Website by
     <a href="https://htmlacademy.ru">HTML Academy</a>
-  </p>
+    </p>
+  </section>
 </footer>
 
 
