Изменения по комментариям 2

--- a/blank.html
+++ b/blank.html
@@ -15,13 +15,16 @@
       </ul>
     </nav>
 
+    <body>
+
+
+    </body>
   </header> 
   <footer>
     <section>
       <h2>Контакты</h2>
-      <p> #visitsedona 
+      <p> #visitsedona </p>
       <a href="tel:+78005558628">+7 800 555-86-28</a>
-      </p>
     </section>
     <section>
       <ul>
