--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
       </a>
       <ul> 
-        <li><a href="blank.html">информация</a></li>
-        <li><a href="blank.html">фото и видео</a></li>
-        <li><a href="blank.html">карта штата</a></li>
-        <li><a href="Hotels.html">гостиницы</a></li>
+        <li><a href="blank.html">Информация</a></li>
+        <li><a href="blank.html">Фото и видео</a></li>
+        <li><a href="blank.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header> 
 
   <main>
-    <img src="https://via.placeholder.com/150x100" alt="Main image">
     <section>
+      <img src="https://via.placeholder.com/150x100" alt="Main image">
       <h2>Описание</h2>
       <h3>Седона - небольшой городок в Аризоне, <br>  заслуживающий большего!</h3>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -81,9 +81,8 @@
 <footer>
   <section>
     <h2>Контакты</h2>
-    <p> #visitsedona 
+    <p> #visitsedona </p>
     <a href="tel:+78005558628">+7 800 555-86-28</a>
-    </p>
   </section>
   <section>
     <ul>
