Разметка внутренней страницы

--- a/blank.html
+++ b/blank.html
@@ -7,6 +7,9 @@
   <body>
   <header>
     <nav>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
+      </a>
       <ul> 
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
@@ -46,7 +49,7 @@
     <section>
       <p>
       Website by
-      <a href="https://htmlacademy.ru">HTML Academy</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
     </section>
   </footer>
