--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <header>
     <nav>
-      <a>
+      <a href="index.html">
         <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
       </a>
       <ul> 
@@ -104,7 +104,7 @@
   <section>
     <p>
     Website by
-    <a href="https://htmlacademy.ru">HTML Academy</a>
+    <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
     </p>
   </section>
 </footer>
