--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body>
 
   <header>
     <nav>
       <a href="index.html">
         <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
       </a>
-      <ul> 
+      <ul>
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
         <li><a href="blank.html">Карта штата</a></li>
         <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
-  </header> 
+  </header>
 
   <main>
+    <h1>Седона в Аризоне</h1>
     <section>
       <img src="https://via.placeholder.com/150x100" alt="Main image">
       <h2>Описание</h2>
-      <h3>Седона - небольшой городок в Аризоне, <br>  заслуживающий большего!</h3>
+      <h3>Седона - небольшой городок в Аризоне, <br> заслуживающий большего!</h3>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <section>
@@ -38,77 +41,78 @@
       <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
     </section>
     <section>
-    <h3>Еда</h3>
-    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
-  </section>
-  <section>
-    <h3>Сувениры</h3>
-    <p>Не только китайского, но и местного производства</p>
-  </section>
+      <h3>Еда</h3>
+      <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+    </section>
+    <section>
+      <h3>Сувениры</h3>
+      <p>Не только китайского, но и местного производства</p>
+    </section>
 
-  <section>
-    <img src="https://via.placeholder.com/150x100" alt="Canyon">
-    <h3>Там есть мост дьявола</h3>
-    <p>— №2 —</p>
-    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-  </section>
-  <section>
-    <h3>Небольшая площадь</h3>
-    <p>— №3 —</p>
-    <p>Все достопримечательности нахоядтся очень близко</p>
-  </section>
-  <section>
-    <h3>Красивая дорога</h3>
-    <p>— №4 —</p>
-    <p>ехать в седону из лас-вегаса совсем не скучно!</p>
-  </section>
-  <section>
-    <h3>Мало туристов</h3>
-    <p>— №5 —</p>
-    <p>большинство едет в гранд каньон и толпится там</p>
-  </section>
+    <section>
+      <img src="https://via.placeholder.com/150x100" alt="Canyon">
+      <h3>Там есть мост дьявола</h3>
+      <p>— №2 —</p>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    </section>
+    <section>
+      <h3>Небольшая площадь</h3>
+      <p>— №3 —</p>
+      <p>Все достопримечательности нахоядтся очень близко</p>
+    </section>
+    <section>
+      <h3>Красивая дорога</h3>
+      <p>— №4 —</p>
+      <p>ехать в седону из лас-вегаса совсем не скучно!</p>
+    </section>
+    <section>
+      <h3>Мало туристов</h3>
+      <p>— №5 —</p>
+      <p>большинство едет в гранд каньон и толпится там</p>
+    </section>
 
-  <section>
-    <h2>Заинтересовались?</h2>
-    <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-    <a href="blank.html">Поиск Гостиницы в Седоне</a>
-    <div>
+    <section>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <a href="blank.html">Поиск Гостиницы в Седоне</a>
+      <div>
 
-    </div>
-  </section>
-</main>
+      </div>
+    </section>
+  </main>
 
-<footer>
-  <section>
-    <h2>Контакты</h2>
-    <p> #visitsedona </p>
-    <a href="tel:+78005558628">+7 800 555-86-28</a>
-  </section>
-  <section>
-    <ul>
-      <li>
-        <a href="#">Twitter</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="#">Facebook</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="#">Youtube</a>
-      </li>
-    </ul>
-  </section>
-  <section>
-    <p>
-    Website by
-    <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-    </p>
-  </section>
-</footer>
+  <footer>
+    <section>
+      <h2>Контакты</h2>
+      <p> #visitsedona </p>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <a href="#">Twitter</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Facebook</a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">Youtube</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <p>
+        Website by
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </section>
+  </footer>
 
 
-  </body>
+</body>
+
 </html>
