--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <nav>
-      <a href="index.html">
+      <a>
         <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
       </a>
       <ul>
@@ -23,50 +23,49 @@
   </header>
 
   <main>
-    <h1>Седона в Аризоне</h1>
     <section>
       <img src="https://via.placeholder.com/150x100" alt="Main image">
-      <h2>Описание</h2>
-      <h3>Седона - небольшой городок в Аризоне, <br> заслуживающий большего!</h3>
+      <h1>Описание</h1>
+      <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <section>
-      <h3>Настоящий городок</h3>
+      <h2>Настоящий городок</h2>
       <p>— №1 —</p>
       <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       <img src="https://via.placeholder.com/150x100" alt="Photo Hotel">
     </section>
     <section>
-      <h3>Жильё</h3>
+      <h2>Жильё</h2>
       <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
     </section>
     <section>
-      <h3>Еда</h3>
+      <h2>Еда</h2>
       <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
     </section>
     <section>
-      <h3>Сувениры</h3>
+      <h2>Сувениры</h2>
       <p>Не только китайского, но и местного производства</p>
     </section>
 
     <section>
       <img src="https://via.placeholder.com/150x100" alt="Canyon">
-      <h3>Там есть мост дьявола</h3>
+      <h2>Там есть мост дьявола</h2>
       <p>— №2 —</p>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </section>
     <section>
-      <h3>Небольшая площадь</h3>
+      <h2>Небольшая площадь</h2>
       <p>— №3 —</p>
       <p>Все достопримечательности нахоядтся очень близко</p>
     </section>
     <section>
-      <h3>Красивая дорога</h3>
+      <h2>Красивая дорога</h2>
       <p>— №4 —</p>
       <p>ехать в седону из лас-вегаса совсем не скучно!</p>
     </section>
     <section>
-      <h3>Мало туристов</h3>
+      <h2>Мало туристов</h2>
       <p>— №5 —</p>
       <p>большинство едет в гранд каньон и толпится там</p>
     </section>
