Графика всех страниц

--- a/blank.html
+++ b/blank.html
@@ -10,13 +10,13 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
+        <img src="img/logo.png" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
         <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="blank.html">Гостиницы</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
 
@@ -26,6 +26,7 @@
     </body>
   </header>
   <footer>
+    <img src="img/map.png" width="1199" height="594" alt="Седона Аризона 86336">
     <section>
       <h2>Контакты</h2>
       <p> #visitsedona </p>
@@ -34,24 +35,31 @@
     <section>
       <ul>
         <li>
-          <a href="#">Twitter</a>
+          <a href="#">
+            <img src="img/social network/twitter.svg" alt="Twitter" width="46" height="48">
+          </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">Facebook</a>
+          <a href="#">
+            <img src="img/social network/facebook.svg" alt="Facebook" width="46" height="48">
+          </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">Youtube</a>
+          <a href="#">
+            <img src="img/social network/youtube.svg" alt="Youtube" width="46" height="48">
+          </a>
         </li>
       </ul>
     </section>
     <section>
       <p>
-        Website by
-        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/social network/Group 6.svg" alt="htmlacademy" width="204" height="33">
+        </a>
       </p>
     </section>
   </footer>
