--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/150x100" alt="Logo Sedona">
+        <img src="img/logo.png" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -83,7 +83,7 @@
       </ul>
     </section>
     <section>
-      <img src="https://via.placeholder.com/150x100" alt="Amara Resort&Spa">
+      <img src="img/catalog/amara.jpg" alt="Amara Resort&Spa" width="135" height="90">
       <h2>Amara Resort & Spa</h2>
       <p>Гостиница</p>
       <p>От 4000 ₽</p>
@@ -93,7 +93,7 @@
       <p>Рейтинг: 8,5</p>
     </section>
     <section>
-      <img src="https://via.placeholder.com/150x100" alt="Desert Quail Inn">
+      <img src="img/catalog/desert.jpg" alt="Desert Quail Inn" width="135" height="90">
       <h2>Desert Quail Inn</h2>
       <p>Мотель</p>
       <p>От 3000 ₽</p>
@@ -103,7 +103,7 @@
       <p>Рейтинг: 8,9</p>
     </section>
     <section>
-      <img src="https://via.placeholder.com/150x100" alt="Villas at Poco Diablo">
+      <img src="img/catalog/villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
       <h2>Villas at Poco Diablo</h2>
       <p>Апартаменты</p>
       <p>От 2000 ₽</p>
@@ -115,6 +115,7 @@
   </main>
 
   <footer>
+    <img src="img/map.png" alt="Седона Аризона 86336" width="1199" height="594">
     <section>
       <h2>Контакты</h2>
       <p> #visitsedona </p>
@@ -123,24 +124,31 @@
     <section>
       <ul>
         <li>
-          <a href="#">Twitter</a>
+          <a href="#">
+            <img src="img/social network/twitter.svg" alt="Twitter" width="46" height="48">
+          </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">Facebook</a>
+          <a href="#">
+            <img src="img/social network/facebook.svg" alt="Facebook" width="46" height="48">
+          </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">Youtube</a>
+          <a href="#">
+            <img src="img/social network/youtube.svg" alt="Youtube" width="46" height="48">
+          </a>
         </li>
       </ul>
     </section>
     <section>
       <p>
-        Website by
-        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/social network/Group 6.svg" alt="htmlacademy" width="204" height="33">
+        </a>
       </p>
     </section>
   </footer>
