--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <header>
     <nav>
       <a href="index.html">
-        <img src="img/logo.png" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+        <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -115,31 +116,29 @@
   </main>
 
   <footer>
-    <img src="img/map.png" alt="Седона Аризона 86336" width="1199" height="594">
-    <section>
-      <h2>Контакты</h2>
-      <p> #visitsedona </p>
-      <a href="tel:+78005558628">+7 800 555-86-28</a>
+    <h2>Контакты</h2>
+    <p> #visitsedona </p>
+    <a href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
     <section>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/twitter.svg" alt="Twitter" width="46" height="48">
+            <img src="img/icons/social/twitter.svg" alt="Twitter" width="46" height="48">
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/facebook.svg" alt="Facebook" width="46" height="48">
+            <img src="img/icons/social/facebook.svg" alt="Facebook" width="46" height="48">
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/youtube.svg" alt="Youtube" width="46" height="48">
+            <img src="img/icons/social/youtube.svg" alt="Youtube" width="46" height="48">
           </a>
         </li>
       </ul>
@@ -147,7 +146,7 @@
     <section>
       <p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/social network/Group 6.svg" alt="htmlacademy" width="204" height="33">
+          <img src="img/websitehtmlacademy.svg" alt="htmlacademy" width="204" height="33">
         </a>
       </p>
     </section>
