--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="icon" href="Sedona.ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <a>
-        <img src="img/logo.png" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
+        <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -25,7 +25,7 @@
 
   <main>
     <section>
-      <img src="img/Welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
+      <img src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
       <h1>Описание</h1>
       <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -34,26 +34,26 @@
       <h2>Настоящий городок</h2>
       <p>— №1 —</p>
       <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-      <img src="img/hotel-2.jpg" alt="Фото отеля" width="800" height="256">
+      <img src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
     </section>
     <section>
-      <img src="img/icons/icon-1.svg" alt="Домик" width="75" height="72">
+      <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
       <h2>Жильё</h2>
       <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
     </section>
     <section>
-      <img src="img/icons/icon-2.svg" alt="Бургер" width="75" height="72">
+      <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
       <h2>Еда</h2>
       <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
     </section>
     <section>
-      <img src="img/icons/icon-3.svg" alt="Подарок" width="75" height="72">
+      <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
       <h2>Сувениры</h2>
       <p>Не только китайского, но и местного производства</p>
     </section>
 
     <section>
-      <img src="img/canyon-2.jpg" alt="Каньон" width="800" height="256">
+      <img src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
       <h2>Там есть мост дьявола</h2>
       <p>— №2 —</p>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -85,31 +85,29 @@
   </main>
 
   <footer>
-    <img src="img/map.png" width="1199" height="594" alt="Седона Аризона 86336">
-    <section>
-      <h2>Контакты</h2>
-      <p> #visitsedona </p>
-      <a href="tel:+78005558628">+7 800 555-86-28</a>
+    <h2>Контакты</h2>
+    <p> #visitsedona </p>
+    <a href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
     <section>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/twitter.svg" alt="Twitter" width="46" height="48">
+            <img src="img/icons/social/twitter.svg" alt="Twitter" width="46" height="48">
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/facebook.svg" alt="Facebook" width="46" height="48">
+            <img src="img/icons/social/facebook.svg" alt="Facebook" width="46" height="48">
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href="#">
-            <img src="img/social network/youtube.svg" alt="Youtube" width="46" height="48">
+            <img src="img/icons/social/youtube.svg" alt="Youtube" width="46" height="48">
           </a>
         </li>
       </ul>
@@ -117,7 +115,7 @@
     <section>
       <p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/social network/Group 6.svg" alt="htmlacademy" width="204" height="33">
+          <img src="img/websitehtmlacademy.svg" alt="htmlacademy" width="204" height="33">
         </a>
       </p>
     </section>
