--- a/blank.html
+++ b/blank.html
@@ -27,39 +27,30 @@
     </body>
   </header>
   <footer>
-    <section>
-      <h2>Контакты</h2>
-      <p> #visitsedona </p>
-      <a href="tel:+78005558628">+7 800 555-86-28</a>
+    <h2>Контакты</h2>
+    <p> #visitsedona </p>
+    <a href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
     <section>
       <ul>
         <li>
-          <a href="#">
-            <img src="img/icons/social/twitter.svg" alt="Twitter" width="46" height="48">
-          </a>
+          <a href="#">Twitter</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">
-            <img src="img/icons/social/facebook.svg" alt="Facebook" width="46" height="48">
-          </a>
+          <a href="#">Facebook</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="#">
-            <img src="img/icons/social/youtube.svg" alt="Youtube" width="46" height="48">
-          </a>
+          <a href="#">Youtube</a>
         </li>
       </ul>
     </section>
     <section>
       <p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/websitehtmlacademy.svg" alt="htmlacademy" width="204" height="33">
-        </a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
       </p>
     </section>
   </footer>
