--- a/blank.html
+++ b/blank.html
@@ -4,53 +4,55 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
+  <link href="normalize.css" rel="stylesheet">
+  <link href='css /style.css' rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a href="index.html">
+<body class="page-body">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
         <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
-      <ul>
-        <li><a href="blank.html">Информация</a></li>
-        <li><a href="blank.html">Фото и видео</a></li>
-        <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
-      </ul>
+      <div class="main-navigation-wrapper">
+        <ul class="site-navigation">
+          <li><a href="blank.html">Информация</a></li>
+          <li><a href="blank.html">Фото и видео</a></li>
+          <li><a href="blank.html">Карта штата</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
+        </ul>
+      </div>
     </nav>
-
-    <body>
-
-
-    </body>
   </header>
-  <footer>
-    <h2>Контакты</h2>
+
+  <footer class="main-footer">
+    <h2 calss="footer-contacts">Контакты</h2>
     <p> #visitsedona </p>
-    <a href="tel:+78005558628">+7 800 555-86-28</a>
+    <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
     <section>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Twitter</a>
+          <a class="social-button" href="#">Twitter</a>
         </li>
       </ul>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Facebook</a>
+          <a class="social-button" href="#">Facebook</a>
         </li>
       </ul>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Youtube</a>
+          <a class="social-button" href="#">Youtube</a>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="footer-copyright">
       <p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
+        <a class="button-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
       </p>
     </section>
   </footer>
