--- a/index.html
+++ b/index.html
@@ -1,114 +1,127 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
+  <link href="normalize.css" rel="stylesheet">
+  <link href="css /style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body>
-
-  <header>
-    <nav>
-      <a>
+<body class="page-body">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="img/logo.svg" alt="Logo Sedona" width="138" height="70" alt="Логотип город Седона">
       </a>
-      <ul>
-        <li><a href="blank.html">Информация</a></li>
-        <li><a href="blank.html">Фото и видео</a></li>
-        <li><a href="blank.html">Карта штата</a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
-      </ul>
+      <div class="main-navigation-wrapper">
+          <ul class="site-navigation">
+            <li><a href="blank.html">Информация</a></li>
+            <li><a href="blank.html">Фото и видео</a></li>
+            <li><a href="blank.html">Карта штата</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
+          </ul>
+      </div>
     </nav>
   </header>
 
-  <main>
-    <section>
-      <img src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
+  <main class="container">
+    <section class="features">
+      <img class="features-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
+    </section>
+    <section class="book">
       <h1>Описание</h1>
-      <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      <h2 class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="slogan-item">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
-    <section>
-      <h2>Настоящий городок</h2>
-      <p>— №1 —</p>
-      <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-      <img src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
-    </section>
-    <section>
+    <div class="features-columns">
+      <section class="article">
+        <h2>Настоящий городок</h2>
+        <p class="article-list">— №1 —</p>
+        <p class="article-list">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      </section>
+      <section>
+        <img class="article-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
+      </section>
+    </div>
+    <section class="about">
       <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
       <h2>Жильё</h2>
-      <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      <p class="article-list">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
     </section>
-    <section>
+    <section class="about">
       <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
       <h2>Еда</h2>
-      <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+      <p class="article-list">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
     </section>
-    <section>
+    <section class="about">
       <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
       <h2>Сувениры</h2>
-      <p>Не только китайского, но и местного производства</p>
+      <p class="article-list">Не только китайского, но и местного производства</p>
     </section>
-
-    <section>
-      <img src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
-      <h2>Там есть мост дьявола</h2>
-      <p>— №2 —</p>
-      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-    </section>
-    <section>
+    <div class="index-columns">
+      <section class="about">
+        <img class="article-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
+      </section>
+      <section class="article article-background-blue">
+        <h2>Там есть мост дьявола</h2>
+        <p class="article-list">— №2 —</p>
+        <p class="article-list">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </section>
+    </div>
+    <section class="about">
       <h2>Небольшая площадь</h2>
-      <p>— №3 —</p>
-      <p>Все достопримечательности нахоядтся очень близко</p>
+      <p class="article-list">— №3 —</p>
+      <p class="article-list">Все достопримечательности нахоядтся очень близко</p>
     </section>
-    <section>
+    <section class="about">
       <h2>Красивая дорога</h2>
-      <p>— №4 —</p>
-      <p>ехать в седону из лас-вегаса совсем не скучно!</p>
-    </section>
-    <section>
+      <p class="article-list">— №4 —</p>
+      <p class="article-list">ехать в седону из лас-вегаса совсем не скучно!</p>
+    </section class="article">
+    <section class="about">
       <h2>Мало туристов</h2>
-      <p>— №5 —</p>
-      <p>большинство едет в гранд каньон и толпится там</p>
+      <p class="article-list">— №5 —</p>
+      <p class="article-list">большинство едет в гранд каньон и толпится там</p>
     </section>
 
-    <section>
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <a href="blank.html">Поиск Гостиницы в Седоне</a>
+    <section class="book">
+      <h2 class="slogan">Заинтересовались?</h2>
+      <p class="slogan-item">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <a class="button button-search" href="blank.html">Поиск Гостиницы в Седоне</a>
       <div>
 
       </div>
     </section>
   </main>
 
-  <footer>
-    <h2>Контакты</h2>
+  <footer class="main-footer">
+    <h2 calss="footer-contacts">Контакты</h2>
     <p> #visitsedona </p>
-    <a href="tel:+78005558628">+7 800 555-86-28</a>
+    <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
     <section>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Twitter</a>
+          <a class="social-button" href="#">Twitter</a>
         </li>
       </ul>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Facebook</a>
+          <a class="social-button" href="#">Facebook</a>
         </li>
       </ul>
-      <ul>
+      <ul class="footer-social">
         <li>
-          <a href="#">Youtube</a>
+          <a class="social-button" href="#">Youtube</a>
         </li>
       </ul>
     </section>
-    <section>
+    <section class="footer-copyright">
       <p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
+        <a class="button-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
       </p>
     </section>
   </footer>
