--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
   <link href="normalize.css" rel="stylesheet">
-  <link href="css /style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
@@ -28,15 +28,15 @@
   </header>
 
   <main class="container">
-    <section class="features">
-      <img class="features-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
+    <h1>Описание</h1>
+    <section class="intro">
+      <img class="intro-img" src="img/index/welcome.svg" alt="Добро пожаловать в великолепную Седону" width="456" height="350">
     </section>
-    <section class="book">
-      <h1>Описание</h1>
+    <section class="info">
       <h2 class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
       <p class="slogan-item">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
-    <div class="features-columns">
+    <div class="intro-columns">
       <section class="article">
         <h2>Настоящий городок</h2>
         <p class="article-list">— №1 —</p>
@@ -87,7 +87,7 @@
       <p class="article-list">большинство едет в гранд каньон и толпится там</p>
     </section>
 
-    <section class="book">
+    <section class="info">
       <h2 class="slogan">Заинтересовались?</h2>
       <p class="slogan-item">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
       <a class="button button-search" href="blank.html">Поиск Гостиницы в Седоне</a>
