--- a/blank.html
+++ b/blank.html
@@ -52,7 +52,7 @@
     </section>
     <section class="footer-copyright">
       <p>
-        <a class="button-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
+        <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
       </p>
     </section>
   </footer>
