--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
-          <li><a href="catalog.html">Гостиницы</a></li>
+          <li class="this-page"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </div>
     </nav>
@@ -115,7 +115,6 @@
       <a class="link-htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">Website by .htmlacademy</a>
     </section>
   </footer>
-
 
 </body>
 
