--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="blank.html">Информация</a></li>
           <li><a href="blank.html">Фото и видео</a></li>
           <li><a href="blank.html">Карта штата</a></li>
-          <li class="this-page"><a href="catalog.html">Гостиницы</a></li>
+          <li class="current-page"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </div>
     </nav>
