Стилизация каталога Испр 2

--- a/catalog.html
+++ b/catalog.html
@@ -83,13 +83,13 @@
       <p class="sort-count">Найдено: 3</p>
       <p class="sort-text">Сортировка</p>
       <ul class="sort-list">
-        <li><a class="sort-link" href="#">По цене</a></li>
+        <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
         <li><a class="sort-link" href="#">По типу</a></li>
         <li><a class="sort-link" href="#">По рейтингу</a></li>
       </ul>
-      <ul class="sort-arrow">
-        <li><a class="arrow-down" href="#">По убыванию</a></li>
-        <li><a class="arrow-up" href="#">По возрастанию</a></li>
+      <ul class="rating-list">
+        <li><a class="sort-arrow sort-arrow-active" href="#">По убыванию</a></li>
+        <li><a class="sort-arrow" href="#">По возрастанию</a></li>
       </ul>
     </section>
     <section class="hotel">
