Сетки на гридах

--- a/index.html
+++ b/index.html
@@ -39,33 +39,44 @@
       <p class="info-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <div class="features">
-      <section class="feature">
-        <h2>Настоящий городок</h2>
-        <p class="feature-number">— №1 —</p>
-        <p class="feature-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
-      </section>
-      <section class="feature-inner">
-        <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
-        <h2>Жильё</h2>
-        <p class="feature-inner-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-      </section>
-      <section class="feature-inner">
-        <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
-        <h2>Еда</h2>
-        <p class="feature-inner-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
-      </section>
-      <section class="feature-inner">
-        <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
-        <h2>Сувениры</h2>
-        <p class="feature-inner-text">Не только китайского, но и местного производства</p>
-      </section>
-      <section class="feature">
+      <div class="feature-inner-city">
+        <section class="feature">
+          <h2>Настоящий городок</h2>
+          <p class="feature-number">— №1 —</p>
+          <p class="feature-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        </section>
+        <section>
+          <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
+        </section>
+      </div>
+      <div class="feature-inner-block">
+        <section class="feature-inner">
+          <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
+          <h2>Жильё</h2>
+          <p class="feature-inner-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </section>
+        <section class="feature-inner">
+          <img src="img/icons/food.svg" alt="Бургер" width="75" height="72">
+          <h2>Еда</h2>
+          <p class="feature-inner-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+        </section>
+        <section class="feature-inner">
+          <img src="img/icons/gift.svg" alt="Подарок" width="75" height="72">
+          <h2>Сувениры</h2>
+          <p class="feature-inner-text">Не только китайского, но и местного производства</p>
+        </section>
+      </div>
+      <div class="feature-canyon">
+      <section>
         <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
+      </section>
+      <section>
         <h2>Там есть мост дьявола</h2>
         <p class="feature-number">— №2 —</p>
         <p class="feature-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </section>
+      </div>
+      <div class="feature-other">
       <section class="feature feature-background-grey">
         <h2>Небольшая площадь</h2>
         <p class="feature-number">— №3 —</p>
@@ -81,6 +92,7 @@
         <p class="feature-number">— №5 —</p>
         <p class="feature-text">большинство едет в гранд каньон и толпится там</p>
       </section>
+      </div>
     </div>
     <section class="book">
       <h2 class="book-headline">Заинтересовались?</h2>
@@ -94,6 +106,7 @@
   </main>
 
   <footer class="main-footer">
+    <section>
     <h2 calss="footer-contacts">Контакты</h2>
     <p> #visitsedona </p>
     <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
