Сетка на гридах Исправления

--- a/index.html
+++ b/index.html
@@ -39,16 +39,12 @@
       <p class="info-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <div class="features">
-      <div class="feature-inner-city">
-        <section class="feature">
-          <h2>Настоящий городок</h2>
-          <p class="feature-number">— №1 —</p>
-          <p class="feature-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-        </section>
-        <section>
-          <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
-        </section>
-      </div>
+      <section class="feature">
+        <h2>Настоящий городок</h2>
+        <p class="feature-number">— №1 —</p>
+        <p class="feature-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+        <img class="feature-img" src="img/index/hotel.jpg" alt="Настоящий городок" width="800" height="256">
+      </section>
       <div class="feature-inner-block">
         <section class="feature-inner">
           <img src="img/icons/house.svg" alt="Домик" width="75" height="72">
@@ -66,17 +62,12 @@
           <p class="feature-inner-text">Не только китайского, но и местного производства</p>
         </section>
       </div>
-      <div class="feature-canyon">
-      <section>
+      <section class="feature-canyon">
         <img class="feature-img" src="img/index/canyon.jpg" alt="Каньон" width="800" height="256">
-      </section>
-      <section>
         <h2>Там есть мост дьявола</h2>
         <p class="feature-number">— №2 —</p>
         <p class="feature-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </section>
-      </div>
-      <div class="feature-other">
       <section class="feature feature-background-grey">
         <h2>Небольшая площадь</h2>
         <p class="feature-number">— №3 —</p>
@@ -92,7 +83,6 @@
         <p class="feature-number">— №5 —</p>
         <p class="feature-text">большинство едет в гранд каньон и толпится там</p>
       </section>
-      </div>
     </div>
     <section class="book">
       <h2 class="book-headline">Заинтересовались?</h2>
@@ -106,13 +96,13 @@
   </main>
 
   <footer class="main-footer">
-    <section>
-    <h2 calss="footer-contacts">Контакты</h2>
-    <p> #visitsedona </p>
-    <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+    <section class="footer-contacts">
+      <h2>Контакты</h2>
+      <p> #visitsedona </p>
+      <a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
-    <section>
-      <ul class="footer-social">
+    <section class="footer-social">
+      <ul>
         <li>
           <a class="social-button" href="#">Twitter</a>
         </li>
